# litevec

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  make-build.bat
.github/workflows/: ci.yaml  ci.yml  docker.yaml  plain.yaml
docs/: API.md  DEMO.md
scripts/: compute-embedding.js  create-collection.js  delete-collection.js  get-collection.js  get-embedding.js  index-documents.js  list-collections.js  list-embeddings.js  ping.js  search-phrase.js  shutdown.js
scripts/shared/: embeddings.js  language.js  safe-fetch.js  settings.js  settings.json  splitter.js
src/: db.rs  main.rs  server.rs  shutdown.rs  similarity.rs
src/routes/: collection.rs  docs.rs  system.rs
