[package]
edition = "2021"
license = "MIT"
version = "0.4.0"
name = "litevec"
readme = "README.md"
categories = ["science", "database-implementations"]
repository = "https://github.com/prantlf/litevec"
description = "A tiny vector database for storing and querying embeddings in pure Rust."
authors = [
  "Miguel Piedrafita <soy@miguelpiedrafita.com>",
  "Ferdinand Prantl <prantlf@gmailcom>"
]
keywords = [
  "database", "embedding", "nearest-neighbor", "similarity", "vector"
]

[dependencies]
aide = { version = "0.13.1", features = ["axum"] }
anyhow = "1.0.79"
axum = { version = "0.7.3", features = ["tracing"] }
axum-jsonschema = { version = "0.8.0", features = ["aide"] }
axum-server = "0.6.0"
bincode = "1.3.3"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
rayon = "1.8.0"
reqwest = "0.11.23"
schemars = "0.8.16"
serde = "1.0.195"
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.0", features = [
  "compression-full", "cors", "decompression-full", "limit", "timeout", "trace",
  "validate-request"
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
chrono = "0.4.31"
