[package]
edition = "2021"
license = "MIT"
version = "0.6.2"
name = "litevec"
readme = "README.md"
categories = ["science", "database-implementations"]
repository = "https://github.com/prantlf/litevec"
description = "A tiny vector database for storing and querying embeddings in pure Rust."
authors = [
  "Miguel Piedrafita <soy@miguelpiedrafita.com>",
  "Ferdinand Prantl <prantlf@gmailcom>"
]
keywords = [
  "database", "embedding", "nearest-neighbor", "similarity", "vector"
]

[dependencies]
aide = { version = "0.13.4", features = ["axum"] }
anyhow = "1.0.83"
axum = { version = "0.7.5", features = ["tracing"] }
axum-jsonschema = { version = "0.8.0", features = ["aide"] }
axum-server = "0.6.0"
bincode = "1.3.3"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
openssl = { version = "0.10.64", features = ["vendored"] }
percent-encoding = "2.3.1"
rayon = "1.10.0"
reqwest = "0.12.4"
schemars = "0.8.19"
serde = "1.0.200"
serde_json = "1.0.116"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = [
  "compression-full", "cors", "decompression-full", "limit", "timeout", "trace",
  "validate-request"
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url-escape = "0.1.1"

[build-dependencies]
chrono = "0.4.38"
